--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Hello wolrd Negga si Emm</h1>
+    <form>
+        <label>Name</label>
+        <input type="text" name="Name" id="name">
+    </form>
     
 </body>
 </html>
