--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <form>
         <label>Name</label>
         <input type="text" name="Name" id="name">
+        <a href="login.html">4</a>
+        <a href="jonas.html">1</a>
+        <a href="bagongfile.html">2</a>
+        <a href="test.html">3</a>
+        <a href="testinglang.html">1</a>
     </form>
     
 </body>
