--- a/bagongfile.html
+++ b/bagongfile.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <title><h1>bagong file lang po ito</h1></title>
-    <h1>Hello Negga</h1>
+        <h1>Hello Negga</h1>
+        <a href="index.html">BACK</a>
 </body>
 </html>
