--- a/jonas.html
+++ b/jonas.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <title><h1>Hellow jonassss</h1></title>
+    <h1>Hellow Negga</h1>
 </body>
 </html>
